--- a/index.html
+++ b/index.html
@@ -9,8 +9,26 @@
 </head>
 <body>
     
-    <h1 class="bg-red-700">test </h1>
+    <header class="bg-yellow-100">
+        <nav class="p-4 md:flex md:justify-between md:items-center md:py-4 md:w-10/12 mx-auto">
+            <!-- !Blog Button -->
+            <button id="btn-blog" class="bg-green-300 px-5 py-2 rounded-lg font-semibold">Blog</button>
+
+            <!-- !home button -->
+            <button id="btn-home" class="bg-green-300 px-5 py-2 rounded-lg font-semibold hidden">Home</button>
+            <!-- !Donate Button -->
+            <span class="flex items-center my-2 md:my-0 font-semibold"><img class="mr-3 w-10" src="./assets/logo.png" alt="">
+                Donate Bangladesh
+            </span>
+            <!-- !Account Balance -->
+            <span class="flex items-center"><img class="mr-3 w-10" src="./assets/coin.png" alt="">
+                <!-- !main Balance -->
+                <span id="main-balance">10000 </span> <span class="ml-2"> BDT</span>
+            </span>
+        </nav>
+    </header>
     
+    <!-- Header Part Styling is end  -->
 
     <script src="./root.js"></script>
     <script src="./main.js"></script>
