--- a/index.html
+++ b/index.html
@@ -1,51 +1,171 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>donate</title>
     <!-- !Tailwind CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body>
-    
-    <header class="bg-yellow-50">
-        <nav class="p-4 md:flex md:justify-between md:items-center md:py-4 md:w-10/12 mx-auto">
-            <!-- !Blog Button -->
-            <button id="btn-blog" class="bg-lime-300 px-5 py-2 rounded-lg font-semibold">Blog</button>
+  </head>
+  <body>
+    <section id="header-section" class="pb-1">
+      <header class="bg-yellow-50">
+        <nav
+          class="p-4 md:flex md:justify-between md:items-center md:py-4 md:w-10/12 mx-auto"
+        >
+          <!-- !Blog Button -->
+          <button
+            id="btn-blog"
+            class="bg-lime-300 px-5 py-2 rounded-lg font-semibold"
+          >
+            Blog
+          </button>
 
-            <!-- !home button -->
-            <button id="btn-home" class="bg-lime-300 px-5 py-2 rounded-lg font-semibold hidden">Home</button>
-            <!-- !Donate Logo -->
-            <span class="flex items-center  my-2 md:my-0 font-semibold"><img class="mr-3 w-10" src="./assets/logo.png" alt="">
-                Donate Bangladesh
-            </span>
-            <!-- !Account Balance -->
-            <span class="flex items-center"><img class="mr-3 w-10" src="./assets/coin.png" alt="">
-                <!-- !main Balance -->
-                <span id="main-balance">10000 </span> <span class="ml-2"> BDT</span>
-            </span>
+          <!-- !home button -->
+          <button
+            id="btn-home"
+            class="bg-lime-300 px-5 py-2 rounded-lg font-semibold hidden"
+          >
+            Home
+          </button>
+          <!-- !Donate Logo -->
+          <span class="flex items-center my-2 md:my-0 font-semibold"
+            ><img class="mr-3 w-10" src="./assets/logo.png" alt="" />
+            Donate Bangladesh
+          </span>
+          <!-- !Account Balance -->
+          <span class="flex items-center"
+            ><img class="mr-3 w-10" src="./assets/coin.png" alt="" />
+            <!-- !main Balance -->
+            <span id="main-balance">10000 </span> <span class="ml-2"> BDT</span>
+          </span>
         </nav>
-    </header>
+      </header>
 
-    <!-- Header Part Styling is end  -->
+      <!-- Header Part Styling is end  -->
 
-
-    <!-- Donate And History Button Are starts -->
-     <main class="mt-2">
+      <!-- Donate And History Button Are starts -->
+      <main class="mt-2">
         <div class="text-center">
-              <!-- !Blog Button -->
-              <button id="btn-donate" class="bg-lime-400 px-5 py-2 rounded-lg font-semibold border-2 border-lime-400">Donation</button>
-
-              <button id="btn-history" class="border-2 px-5 py-2 rounded-lg font-semibold">History</button>
-
+          <!-- !Blog Button -->
+          <button
+            id="btn-donate"
+            class="bg-lime-400 px-5 py-2 rounded-lg font-semibold border-2 border-lime-400"
+          >
+            Donation
+          </button>
+          <!-- !History Button -->
+          <button
+            id="btn-history"
+            class="border-2 px-5 py-2 rounded-lg font-semibold"
+          >
+            History
+          </button>
         </div>
-     </main>
-    <!-- Donate And History Button Are Ends -->
+      </main>
+      <!-- Donate And History Button Are Ends -->
+    </section>
 
-    
+    <!-- !Card section Starts -->
+
+    <section id="card-section" class="mt-5">
+      <main class="md:w-9/12 mx-auto p-2">
+        <!-- !card part -->
+        <div class="item-1 border-2 p-3 rounded-xl md:grid md:grid-cols-12 shadow-md">
+          <!-- Image Area Left Side -->
+          <div class="left md:col-span-5">
+            <img class="md:max-h-[338px] md:w-[500px]" src="./assets/noakhali.png" alt="boat is running on flood" />
+          </div>
+          <!-- !content Area -->
+          <div class="right md:col-span-7">
+            <div class="top-area">
+                <!-- Donate for Flood at Noakhali, Bangladesh -->
+              <!-- !Donation  Balance -->
+               <button id="donate-output-btn" class="bg-gray-200 px-4 py-1 my-2 rounded-xl">
+
+                   <span class="flex items-center"
+                     ><img class="mr-1 my-2 w-6" src="./assets/coin.png" alt="" />
+                     <!-- !Donation Balance -->
+                     <span id="donation-balance-amount">0</span>
+                     <span class="ml-2"> BDT</span>
+                   </span>
+               </button>
+            </div>
+            <h1 class="font-semibold text-sm md:text-lg">Donate for Flood at Noakhali, Bangladesh</h1>
+            <p class="my-3"> The recent floods in Noakhali have caused significant damage to homes  infrastructure. Your donation will help provide essential supplies and  to those affected by this disaster. Every contribution, big or small, makes  difference. Please join us in supporting the relief efforts and making a positive impact on the lives of those in need.</p>
+            <input id="donate-amount-input" class="w-full py-3 px-3 rounded-lg border-2 outline-2 outline-gray-400  " type="number" placeholder="Write Donation Amount">
+            <!--  -->
+            <button id="donate-now-btn-user" class="bg-lime-300 w-full rounded-lg my-3 p-3 font-bold">Donate Now</button>
+          </div>
+        </div>
+        <!-- !card 1 ends here -->
+
+        <!--! card 2 Starts Here  -->
+        <div class="item-2 border-2 p-3 rounded-xl md:grid md:grid-cols-12 my-4 shadow-md">
+            <!-- Image Area Left Side -->
+            <div class="left md:col-span-5">
+              <img class="md:max-h-[338px] md:w-[500px]" src="./assets/feni.png" alt="boat is running on flood" />
+            </div>
+            <!-- !content Area -->
+            <div class="right md:col-span-7">
+              <div class="top-area">
+                  <!-- !Donate for Flood Relief in Feni,Bangladesh -->
+                <!-- !Donation  Balance -->
+                 <button id="donate-output-btn" class="bg-gray-200 px-4 py-1 my-2 rounded-xl">
+  
+                     <span class="flex items-center"
+                       ><img class="mr-1 my-2 w-6" src="./assets/coin.png" alt="" />
+                       <!-- !Donation Balance -->
+                       <span id="donation-balance-amount">500</span>
+                       <span class="ml-2">BDT</span>
+                     </span>
+                 </button>
+              </div>
+              <h1 class="font-semibold text-sm md:text-lg">Donate for Flood Relief in Feni,Bangladesh</h1>
+              <p class="my-3"> The recent floods in Feni have devastated local communities, leading to severe disruption and loss. Your generous donation will help provide immediate aid, including food, clean water, and medical supplies, to those affected by this calamity. Together, we can offer crucial support and help rebuild lives in the aftermath of this disaster. Every contribution counts towards making a real difference. Please consider donating today to assist those in urgent need.</p>
+              <input id="donate-amount-input" class="w-full py-3 px-3 rounded-lg border-2 outline-2 outline-gray-400  " type="number" placeholder="Write Donation Amount">
+              <!--  -->
+              <button id="donate-now-btn-user" class="bg-lime-300 w-full rounded-lg my-3 p-3 font-bold">Donate Now</button>
+            </div>
+          </div>
+        <!--! card 2 Starts Ends Here -->
+
+        <!-- !cards 3 starts  -->
+        <div class="item-3 border-2 p-3 rounded-xl md:grid md:grid-cols-12 my-4 shadow-md">
+            <!-- Image Area Left Side -->
+            <div class="left md:col-span-5">
+              <img class="md:max-h-[338px] md:w-[500px]" src="./assets/quota-protest.png" alt="boat is running on flood" />
+            </div>
+            <!-- !content Area -->
+            <div class="right md:col-span-7">
+              <div class="top-area">
+                  <!-- !Donate for Flood Relief in Feni,Bangladesh -->
+                <!-- !Donation  Balance -->
+                 <button id="donate-output-btn" class="bg-gray-200 px-4 py-1 my-2 rounded-xl">
+  
+                     <span class="flex items-center"
+                       ><img class="mr-1 my-2 w-6" src="./assets/coin.png" alt="" />
+                       <!-- !Donation Balance -->
+                       <span id="donation-balance-amount">15000</span>
+                       <span class="ml-2">BDT</span>
+                     </span>
+                 </button>
+              </div>
+              <h1 class="font-semibold text-sm md:text-lg">Aid for Injured in the Quota Movement</h1>
+              <p class="my-3"> The recent Quota movement has resulted in numerous injuries and significant hardship for many individuals. Your support is crucial in providing medical assistance, rehabilitation, and necessary supplies to those affected. By contributing, you help ensure that injured individuals receive the care and support they need during this challenging time. Every donation plays a vital role in alleviating their suffering and aiding in their recovery. Please consider making a donation to support these brave individuals in their time of need.</p>
+              <input id="donate-amount-input" class="w-full py-3 px-3 rounded-lg border-2 outline-2 outline-gray-400  " type="number" placeholder="Write Donation Amount">
+              <!--  -->
+              <button id="donate-now-btn-user" class="bg-lime-300 w-full rounded-lg my-3 p-3 font-bold">Donate Now</button>
+            </div>
+          </div>
+
+        <!-- !cards 3  Ends  -->
+      </main>
+    </section>
+
+    <!-- !Card section Ends -->
 
     <script src="./root.js"></script>
     <script src="./main.js"></script>
-</body>
+  </body>
 </html>
