blog page responsive and Website layout design done

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <span class="flex items-center"
             ><img class="mr-3 w-10" src="./assets/coin.png" alt="" />
             <!-- !main Balance -->
-            <span id="main-balance">10000 </span> <span class="ml-2"> BDT</span>
+            <span id="main-balance">92300</span> <span class="ml-2"> BDT</span>
           </span>
         </nav>
       </header>
@@ -69,7 +69,7 @@
     <!-- !Card section Starts -->
 
     <section id="card-section" class="mt-5">
-      <main class="md:w-9/12 mx-auto p-2">
+      <main class="md:w-9/12 mx-auto p-2 px-5 md:px-0">
         <!-- !card part -->
         <div class="item-1 border-2 p-3 rounded-xl md:grid md:grid-cols-12 shadow-md">
           <!-- Image Area Left Side -->
@@ -134,7 +134,7 @@
         <div class="item-3 border-2 p-3 rounded-xl md:grid md:grid-cols-12 my-4 shadow-md">
             <!-- Image Area Left Side -->
             <div class="left md:col-span-5">
-              <img class="md:max-h-[338px] md:w-[500px]" src="./assets/quota-protest.png" alt="boat is running on flood" />
+              <img class="md:max-h-[372px] md:w-[500px]" src="./assets/quota-protest.png" alt="boat is running on flood" />
             </div>
             <!-- !content Area -->
             <div class="right md:col-span-7">
