--- a/blog.html
+++ b/blog.html
@@ -110,5 +110,7 @@
         </div>
       </div>
     </section>
+    <script src="/root.js"></script>
+    <script src="/main.js"></script>
   </body>
 </html>
