--- a/index.html
+++ b/index.html
@@ -86,16 +86,16 @@
                    <span class="flex items-center"
                      ><img class="mr-1 my-2 w-6" src="./assets/coin.png" alt="" />
                      <!-- !Donation Balance -->
-                     <span id="donation-balance-amount">0</span>
+                     <span id="donation-balance-Nuakhali-has">0</span>
                      <span class="ml-2"> BDT</span>
                    </span>
                </button>
             </div>
             <h1 class="font-semibold text-sm md:text-lg">Donate for Flood at Noakhali, Bangladesh</h1>
             <p class="my-3"> The recent floods in Noakhali have caused significant damage to homes  infrastructure. Your donation will help provide essential supplies and  to those affected by this disaster. Every contribution, big or small, makes  difference. Please join us in supporting the relief efforts and making a positive impact on the lives of those in need.</p>
-            <input id="donate-amount-input" class="w-full py-3 px-3 rounded-lg border-2 outline-2 outline-gray-400  " type="number" placeholder="Write Donation Amount">
+            <input id="donate-For-nuakhali-input" class="w-full py-3 px-3 rounded-lg border-2 outline-2 outline-gray-400  " type="number" placeholder="Write Donation Amount">
             <!--  -->
-            <button id="donate-now-btn-user" class="bg-lime-300 w-full rounded-lg my-3 p-3 font-bold">Donate Now</button>
+            <button id="donate-now-btn-nuakhali" class="bg-lime-300 w-full rounded-lg my-3 p-3 font-bold">Donate Now</button>
           </div>
         </div>
         <!-- !card 1 ends here -->
@@ -116,16 +116,16 @@
                      <span class="flex items-center"
                        ><img class="mr-1 my-2 w-6" src="./assets/coin.png" alt="" />
                        <!-- !Donation Balance -->
-                       <span id="donation-balance-amount">500</span>
+                       <span id="donation-balance-feni">500</span>
                        <span class="ml-2">BDT</span>
                      </span>
                  </button>
               </div>
               <h1 class="font-semibold text-sm md:text-lg">Donate for Flood Relief in Feni,Bangladesh</h1>
               <p class="my-3"> The recent floods in Feni have devastated local communities, leading to severe disruption and loss. Your generous donation will help provide immediate aid, including food, clean water, and medical supplies, to those affected by this calamity. Together, we can offer crucial support and help rebuild lives in the aftermath of this disaster. Every contribution counts towards making a real difference. Please consider donating today to assist those in urgent need.</p>
-              <input id="donate-amount-input" class="w-full py-3 px-3 rounded-lg border-2 outline-2 outline-gray-400  " type="number" placeholder="Write Donation Amount">
+              <input id="donate-feni-input" class="w-full py-3 px-3 rounded-lg border-2 outline-2 outline-gray-400  " type="number" placeholder="Write Donation Amount">
               <!--  -->
-              <button id="donate-now-btn-user" class="bg-lime-300 w-full rounded-lg my-3 p-3 font-bold">Donate Now</button>
+              <button id="donate-btn-for-feni" class="bg-lime-300 w-full rounded-lg my-3 p-3 font-bold">Donate Now</button>
             </div>
           </div>
         <!--! card 2 Starts Ends Here -->
@@ -164,6 +164,21 @@
     </section>
 
     <!-- !Card section Ends -->
+
+
+
+    <!-- !History section Starts  -->
+
+    <section class="mt-10 hidden " id="history-data">
+      <main class="md:w-8/12 p-2 md:mx-auto">
+
+        <div id="transaction-container" class=" border-gray-400 border shadow-lg rounded">
+          <h1 class="text-xl text-center">Money Transaction History</h1>
+        </div>
+
+      </main>
+    </section>
+    <!-- !History section Ends -->
 
     <script src="./root.js"></script>
     <script src="./main.js"></script>
