three function and history balance added

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                      <span class="flex items-center"
                        ><img class="mr-1 my-2 w-6" src="./assets/coin.png" alt="" />
                        <!-- !Donation Balance -->
-                       <span id="donation-balance-amount">15000</span>
+                       <span id="donation-has-rightnow">15000</span>
                        <span class="ml-2">BDT</span>
                      </span>
                  </button>
@@ -155,7 +155,7 @@
               <p class="my-3"> The recent Quota movement has resulted in numerous injuries and significant hardship for many individuals. Your support is crucial in providing medical assistance, rehabilitation, and necessary supplies to those affected. By contributing, you help ensure that injured individuals receive the care and support they need during this challenging time. Every donation plays a vital role in alleviating their suffering and aiding in their recovery. Please consider making a donation to support these brave individuals in their time of need.</p>
               <input id="donate-amount-input" class="w-full py-3 px-3 rounded-lg border-2 outline-2 outline-gray-400  " type="number" placeholder="Write Donation Amount">
               <!--  -->
-              <button id="donate-now-btn-user" class="bg-lime-300 w-full rounded-lg my-3 p-3 font-bold">Donate Now</button>
+              <button id="donate-for-student" class="bg-lime-300 w-full rounded-lg my-3 p-3 font-bold">Donate Now</button>
             </div>
           </div>
 
