--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <section id="header-section" class="pb-1">
+    <section id="header-section" class="pb-1 sticky top-0">
       <header class="bg-yellow-50">
         <nav
           class="p-4 md:flex md:justify-between md:items-center md:py-4 md:w-10/12 mx-auto"
@@ -37,7 +37,7 @@
           <span class="flex items-center"
             ><img class="mr-3 w-10" src="./assets/coin.png" alt="" />
             <!-- !main Balance -->
-            <span id="main-balance">92300</span> <span class="ml-2"> BDT</span>
+            <span id="main-balance">50000</span> <span class="ml-2"> BDT</span>
           </span>
         </nav>
       </header>
@@ -45,8 +45,8 @@
       <!-- Header Part Styling is end  -->
 
       <!-- Donate And History Button Are starts -->
-      <main class="mt-2">
-        <div class="text-center">
+      <main class="pt-2 bg-gray-50">
+        <div class="text-center shadow-sm pb-2">
           <!-- !Blog Button -->
           <button
             id="btn-donate"
