--- a/blog.html
+++ b/blog.html
@@ -16,7 +16,8 @@
   <body>
     <header class="bg-yellow-50">
       <nav
-        class="p-4 md:flex md:justify-between md:items-center md:py-4 md:w-10/12 mx-auto"
+        class="p-4 flex gap-3
+        md:flex md:justify-between md:items-center md:py-4 md:w-10/12 mx-auto"
       >
         <!-- !Blog Button -->
         <button
