--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <!-- !Tailwind CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body>
+  <body class="overflow-x-hidden">
+    
     <section id="header-section" class="pb-1 sticky top-0">
       <header class="bg-yellow-50">
         <nav
-          class="p-4 md:flex md:justify-between md:items-center md:py-4 md:w-10/12 mx-auto"
+          class="p-4 flex gap-3
+           md:flex md:justify-between md:items-center md:py-4 md:w-10/12 mx-auto"
         >
           <!-- !Blog Button -->
           <button
