fix student donation function

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       <main class="md:w-8/12 p-2 md:mx-auto">
 
         <div id="transaction-container" class=" border-gray-400 border shadow-lg rounded">
-          <h1 class="text-xl text-center">Money Transaction History</h1>
+          <h1 class="text-xl text-center my-2">Money Transaction History</h1>
         </div>
 
       </main>
