pop up button is done

--- a/index.html
+++ b/index.html
@@ -102,6 +102,22 @@
         </div>
         <!-- !card 1 ends here -->
 
+
+        <section id="popup" class="my-3 absolute w-full left-0 top-30 hidden">
+          <main class="mx-auto w-9/12 md:w-5/12 bg-gray-300 rounded-lg py-4 px-2 text-center">
+            <div class="popupCard">
+              <h1 class="font-bold text-lg">Congratulation!</h1>
+              <img class="mx-auto my-3" src="./assets/coin.png" alt="">
+              <p >You have Donated For Humankind</p>
+              <p class="my-2 font-semibold">Successfully</p>
+              <button id="close-confirmation" class="bg-slate-50 p-1 rounded">Close Confirmation</button>
+            </div>
+          </main>
+        </section>
+
+
+
+
         <!--! card 2 Starts Here  -->
         <div class="item-2 border-2 p-3 rounded-xl md:grid md:grid-cols-12 my-4 shadow-md">
             <!-- Image Area Left Side -->
@@ -181,6 +197,8 @@
       </main>
     </section>
     <!-- !History section Ends -->
+
+
 
     <script src="./root.js"></script>
     <script src="./main.js"></script>
