--- a/blog.html
+++ b/blog.html
@@ -16,8 +16,7 @@
   <body>
     <header class="bg-yellow-50">
       <nav
-        class="p-4 flex gap-3
-        md:flex md:justify-between md:items-center md:py-4 md:w-10/12 mx-auto"
+        class="p-4 flex gap-3 md:flex md:justify-between md:items-center md:py-4 md:w-10/12 mx-auto"
       >
         <!-- !Blog Button -->
         <button
@@ -47,7 +46,7 @@
         </span>
       </nav>
     </header>
-    <br>
+    <br />
     <h1 class="text-center font-bold text-6xl">FAQ</h1>
     <br />
     <!-- !FAQ Section Starts -->
@@ -66,7 +65,8 @@
             manipulate these nodes.
           </p>
         </div>
-      </div> <br>
+      </div>
+      <br />
       <div class="collapse collapse-arrow bg-base-200">
         <input type="radio" name="my-accordion-2" />
         <div class="collapse-title text-xl font-medium">
@@ -80,7 +80,8 @@
             DOM, making it accessible and modifiable using JavaScript.
           </p>
         </div>
-      </div> <br>
+      </div>
+      <br />
       <div class="collapse collapse-arrow bg-base-200">
         <input type="radio" name="my-accordion-2" />
         <div class="collapse-title text-xl font-medium">
@@ -94,7 +95,8 @@
             but not every node is an element.
           </p>
         </div>
-      </div> <br>
+      </div>
+      <br />
       <div class="collapse collapse-arrow bg-base-200">
         <input type="radio" name="my-accordion-2" />
         <div class="collapse-title text-xl font-medium">
