blog js fil create

--- a/blog.html
+++ b/blog.html
@@ -114,6 +114,7 @@
       </div>
     </section>
     <script src="/root.js"></script>
-    <script src="/main.js"></script>
+    <!-- <script src="/main.js"></script> -->
+     <script src="./blog.js"></script>
   </body>
 </html>
